fixed navbar overflow and added sites

--- a/app.css
+++ b/app.css
@@ -113,7 +113,6 @@ a {
 /* ------------------- */
 
 .main-nav {
-  width: 100%;
   max-width: 2000px;
   margin: 0 auto;
   position: absolute;
